common_opts = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-Wconversion",
    "-Wcast-align",
    "-Wdouble-promotion",
    "-Wformat-security",
    "-Winvalid-pch",
    "-Wmissing-format-attribute",
    "-Wnull-dereference",
    "-Wpacked",
    "-Wpointer-arith",
    "-Wredundant-decls",
    "-Wshadow",
    "-Wsign-compare",
    "-Wsign-conversion",
    "-Wswitch-default",
    "-Wswitch-enum",
    "-Wundef",
    "-Wunused",
    "-Wwrite-strings",
    "-Wduplicated-branches",
    "-Wduplicated-cond",
    "-Wlogical-op",
    "-Wmisleading-indentation",
    "-Wunused-but-set-parameter",
    "-Winit-self",
    #"-Wold-style-cast",
    "-fdiagnostics-color=always",
]

cxx_opts = [
    "-Wuseless-cast",
    "-Wnon-virtual-dtor",
    "-Woverloaded-virtual",
    "-Weffc++",
    "-std=c++17",
] + common_opts

cc_library(
    name = "rrt_star",
    srcs = [
        "src/assert.cpp",
        "src/space/dubins/dubins.cpp",
        "src/space/r3.cpp",
        "src/space/se2.cpp",
    ],
    hdrs = [
        "src/assert.hpp",
        "src/search.hpp",
        "src/space/dubins/dubins.hpp",
        "src/space/n_ball.hpp",
        "src/space/r3.hpp",
        "src/space/se2.hpp",
        "src/space/space_base.hpp",
        "src/tagged.hpp",
        "src/tree/fast.hpp",
        "src/tree/naive.hpp",
        "src/tree/node.hpp",
        "src/tree/tree_base.hpp",
    ],
    copts = cxx_opts,
    linkopts = ["-lpthread"],
    visibility = ["//visibility:public"],
    deps = ["@glm"],
)

cc_binary(
    name = "r3_vis",
    srcs = [
        "apps/r3_vis.cpp",
    ],
    copts = cxx_opts,
    visibility = ["//visibility:public"],
    deps = [
        ":rrt_star",
        "@bb3d",
    ],
)

cc_binary(
    name = "se2_vis",
    srcs = [
        "apps/se2_vis.cpp",
    ],
    copts = cxx_opts,
    visibility = ["//visibility:public"],
    deps = [
        ":rrt_star",
        "@bb3d",
    ],
)

cc_binary(
    name = "plot_dubins",
    srcs = [
        "apps/plot_dubins.cpp",
    ],
    copts = cxx_opts,
    visibility = ["//visibility:public"],
    deps = [
        ":rrt_star",
        "@bb3d",
    ],
)

cc_binary(
    name = "run_for_profiling",
    srcs = [
        "apps/run_for_profiling.cpp",
    ],
    copts = cxx_opts,
    visibility = ["//visibility:public"],
    deps = [
        ":rrt_star",
    ],
)

cc_test(
    name = "test_fast_tree",
    srcs = [
        "test/test_fast_tree.cpp",
    ],
    copts = cxx_opts,
    visibility = ["//visibility:public"],
    deps = [
        ":rrt_star",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "test_angle_difference",
    srcs = [
        "test/test_angle_difference.cpp",
    ],
    copts = cxx_opts,
    visibility = ["//visibility:public"],
    deps = [
        ":rrt_star",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)
